Add StackExchange.Redis package reference

--- a/tfl-stats.Server/tfl-stats.Server.csproj
+++ b/tfl-stats.Server/tfl-stats.Server.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>8.*-*</Version>
     </PackageReference>
+    <PackageReference Include="StackExchange.Redis" Version="2.8.31" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
