Configure project build settings in csproj file
Added `<DisableImplicitProgram>` and `<GenerateProgramFile>` properties to the `<PropertyGroup>` in `tfl-stats.Server.csproj`. This disables the generation of an implicit program entry point and prevents the creation of a program file, affecting the application's build and execution process.

--- a/tfl-stats.Server/tfl-stats.Server.csproj
+++ b/tfl-stats.Server/tfl-stats.Server.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <DisableImplicitProgram>true</DisableImplicitProgram>
+    <GenerateProgramFile>false</GenerateProgramFile>
     <RootNamespace>tfl_stats.Server</RootNamespace>
     <SpaRoot>..\tfl-stats.client</SpaRoot>
     <SpaProxyLaunchCommand>npm run dev</SpaProxyLaunchCommand>
