Update API configuration in appsettings.json
Removed the "TflApi" section and added "ApiSettings"
with only the "BaseUrl" set to "https://api.tfl.gov.uk/".
Logging settings for "LogLevel" remain unchanged.

--- a/tfl-stats.Server/appsettings.json
+++ b/tfl-stats.Server/appsettings.json
@@ -5,10 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  //"TflApi": {
-  //  "AppId": "123",
-  //  "AppKey": "cb52c92815b94cabb22449624d95e007",
-  //  "BaseUrl": "https://api.tfl.gov.uk/"
-  //},
+  "ApiSettings": {
+    "BaseUrl": "https://api.tfl.gov.uk/"
+  },
   "AllowedHosts": "*"
 }
