--- a/tfl-stats.Server/tfl-stats.Server.csproj
+++ b/tfl-stats.Server/tfl-stats.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -12,6 +12,14 @@
     <SpaProxyServerUrl>https://localhost:55811</SpaProxyServerUrl>
 	<UserSecretsId>tfl-stats-secrets</UserSecretsId>
 
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>$(DefineConstants);USE_TFL_MODEL</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants>$(DefineConstants);USE_TFL_MODEL</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
@@ -35,6 +43,7 @@
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
     <ProjectReference Include="..\tfl-stats-Core\tfl-stats-Core.csproj" />
+    <ProjectReference Include="..\TflObjects\TflObjects.csproj" />
   </ItemGroup>
 
 	<ItemGroup>
