--- a/tfl-stats.Tests/tfl-stats.Tests.csproj
+++ b/tfl-stats.Tests/tfl-stats.Tests.csproj
@@ -8,6 +8,14 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>$(DefineConstants);USE_TFL_MODEL</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants>$(DefineConstants);USE_TFL_MODEL</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
     <PackageReference Include="FluentAssertions" Version="8.2.0" />
@@ -26,6 +34,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\tfl-stats.Server\tfl-stats.Server.csproj" />
+    <ProjectReference Include="..\TflObjects\TflObjects.csproj" />
   </ItemGroup>
 
 </Project>
